<resources>
    <string name="app_name">HL Pace</string>
    <string name="SAVE">Save</string>
    <string name="SUBMIT">Submit</string>
    <string name="RESTART">Restart</string>
    <string name="SEND">Send</string>
    <string name="FINISH">Finish</string>
    <string name="DONE">Done</string>
    <string name="NEXT">Next</string>
    <string name="PREVIOUS">Previous</string>
    <string name="OK">OK</string>
    <string name="OR">Or</string>
    <string name="CONFIRM">Confirm</string>
    <string name="PROCEED">Proceed</string>
    <string name="SELECT">Select</string>
    <string name="CLOSE">Close</string>
    <string name="CANCEL">Cancel</string>
    <string name="BACK">Back</string>
    <string name="START">Start</string>
    <string name="CONTINUE">Continue</string>
    <string name="CALCULATE">Calculate</string>
    <string name="RECALCULATE">Recalculate</string>
    <string name="DELETE">Delete</string>
    <string name="UPDATE">Update</string>
    <string name="DOWNLOAD">Download</string>
    <string name="SHARE">Share</string>
    <string name="VIEW">View</string>
    <string name="ADD">Add</string>
    <string name="ADD_MORE">Add More</string>
    <string name="LOGOUT">Logout</string>
    <string name="LOGOUT_APPLICATION">Logout Application</string>
    <string name="PASSWORD">Password</string>
    <string name="ALERT">Alert</string>
    <string name="VIEW_MORE">View More</string>
    <string name="REPORT">Report</string>
    <string name="DESCRIPTION">Description</string>
    <string name="RECOMMENDATIONS">Recommendations</string>
    <string name="TAKEN">Taken</string>
    <string name="SKIP">Skip</string>
    <string name="SKIPPED">Skipped</string>
    <string name="VALUE">Value</string>
    <string name="OBSERVATION">Observation</string>
    <string name="REFRESH">Refresh</string>
    <string name="CATEGORY">Category</string>
    <string name="DOSE">Dose</string>
    <string name="TIME">Time</string>
    <string name="RESEND_OTP">Resend OTP</string>
    <string name="NO_THANKS">No thanks</string>
    <string name="DEAR_USER">Dear User</string>
    <string name="UPLOAD_REPORT">Upload Report</string>
    <string name="UPLOAD_PRESCRIPTION">Upload Prescription</string>
    <string name="ORDER_MEDICINE">Order Medicine</string>
    <string name="ADD_MEDICATION">Add Medication</string>
    <string name="MEDICINE_REMINDER">Medicine Reminder</string>
    <string name="ALL">All</string>
    <string name="IS">is</string>
    <string name="TITLE">Title</string>
    <string name="DASHBOARD">Dashboard</string>
    <string name="HISTORY">History</string>
    <string name="DIGITIZE">Digitize</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="NONE">None</string>
    <string name="MALE">Male</string>
    <string name="FEMALE">Female</string>
    <string name="NAME">Name</string>
    <string name="GENDER">Gender</string>
    <string name="PHONE">Phone</string>
    <string name="PHONE_NUMBER">Phone Number</string>
    <string name="NUMBER">Number</string>
    <string name="ALTERNATE_NUMBER">Alternate Number</string>
    <string name="EMAIL">Email</string>
    <string name="EMAIL_ADDRESS">Email Address</string>
    <string name="EMAIL_ADDRESS_HINT">*Email Address</string>
    <string name="ALTERNATE_EMAIL_ADDRESS">Alternate Email Address</string>
    <string name="ADDRESS">Address</string>
    <string name="AGE">Age</string>
    <string name="DATE_OF_BIRTH">Date Of Birth</string>
    <string name="MOBILE_NUMBER">Mobile Number</string>
    <string name="AND">and</string>
    <string name="DATE">Date</string>
    <string name="RECORD_DATE">Record Date</string>
    <string name="START_DATE">Start Date</string>
    <string name="END_DATE">End Date</string>
    <string name="DAY">Day</string>
    <string name="WEEK">Week</string>
    <string name="MONTH">Month</string>
    <string name="YEAR">Year</string>
    <string name="YEARS">Years</string>
    <string name="FOR">For</string>
    <string name="FROM">From</string>
    <string name="TO">to</string>
    <string name="ONLY">Only</string>
    <string name="STEPS">Steps</string>
    <string name="CALORIES">Calories</string>
    <string name="SEC">Sec</string>
    <string name="TODAY">Today</string>
    <string name="WEEKLY">Weekly</string>
    <string name="MONTHLY">Monthly</string>
    <string name="JANUARY">January</string>
    <string name="FEBRUARY">February</string>
    <string name="MARCH">March</string>
    <string name="APRIL">April</string>
    <string name="MAY">May</string>
    <string name="JUNE">June</string>
    <string name="JULY">July</string>
    <string name="AUGUST">August</string>
    <string name="SEPTEMBER">September</string>
    <string name="OCTOBER">October</string>
    <string name="NOVEMBER">November</string>
    <string name="DECEMBER">December</string>
    <string name="SESSION">Session</string>
    <string name="MYSELF">Myself</string>
    <string name="HIM">him</string>
    <string name="HER">her</string>
    <string name="HIS">his</string>
    <string name="FATHER">Father</string>
    <string name="MOTHER">Mother</string>
    <string name="SON">Son</string>
    <string name="DAUGHTER">Daughter</string>
    <string name="BROTHER">Brother</string>
    <string name="SISTER">Sister</string>
    <string name="WIFE">Wife</string>
    <string name="HUSBAND">Husband</string>
    <string name="SPOUSE">Spouse</string>
    <string name="GRAND_FATHER">Grand Father</string>
    <string name="GRAND_MOTHER">Grand Mother</string>
    <string name="HEIGHT">Height</string>
    <string name="WEIGHT">Weight</string>
    <string name="HIP">Hip</string>
    <string name="WAIST">Waist</string>
    <string name="BMI" translatable="false">BMI</string>
    <string name="WHR" translatable="false">WHR</string>
    <string name="BLOOD_PRESSURE">Blood Pressure</string>
    <string name="CHOLESTEROL">Cholesterol</string>
    <string name="HDL">HDL</string>
    <string name="SYSTOLIC">Systolic</string>
    <string name="DIASTOLIC">Diastolic</string>
    <string name="FEET_INCH">Feet/inch</string>
    <string name="FT_IN">ft,in</string>
    <string name="FT">ft</string>
    <string name="INCH">in</string>
    <string name="CM">cm</string>
    <string name="LBS">lbs</string>
    <string name="KG">kg</string>
    <string name="MM_HG">mm Hg</string>
    <string name="MMOL_L">mm Hg</string>
    <string name="MG_DL">mg/dL</string>
    <string name="KCAL">Kcal</string>
    <string name="MIN">min</string>
    <string name="KM">km</string>
    <string name="MTR">mtr</string>
    <string name="GLUCOSE_FASTING">Glucose (fasting)</string>
    <string name="GLUCOSE_RANDOM">Glucose (Random)</string>
    <string name="TOTAL_CHOLESTEROL">Total Cholesterol</string>
    <string name="TRIGLYCERIDES">Triglycerides</string>
    <string name="RBC">Red Blood Cell (RBC)</string>
    <string name="PLATELET_COUNT">Platelet Count</string>
    <string name="PCV">Packed Cell Volume (PCV)</string>
    <string name="NEUTROPHILS">Neutrophils</string>
    <string name="MONOCYTES">Monocytes</string>
    <string name="MCV">Mean Corpuscular Volume (MCV)</string>
    <string name="MCHC">Mean Corpuscular Hemoglobin Concentration (MCHC)</string>
    <string name="LYMPHOCYTES">Lymphocytes</string>
    <string name="ESR">Erythrocyte Sedimentation Rate (ESR)</string>
    <string name="EOSINOPHILS">Eosinophils</string>
    <string name="BASOPHILS">Basophils</string>
    <string name="SODIUM">Sodium</string>
    <string name="URIC_ACID">Uric Acid</string>
    <string name="CREATININE">Creatinine</string>
    <string name="POTASSIUM">Potassium</string>
    <string name="PHOSPHATE">Phosphate</string>
    <string name="CHLORIDE">Chloride</string>
    <string name="CALCIUM">Calcium</string>
    <string name="UREA">Urea</string>
    <string name="ALP">Alkaline Phosphatase (ALP)</string>
    <string name="TOTAL_BILIRUBIN">Total Bilirubin</string>
    <string name="TOTAL_PROTEIN">Total Protein</string>
    <string name="SGOT">Aspartate Aminotransferase (AST) / SGOT</string>
    <string name="APPEARANCE">Appearance</string>
    <string name="URINE_PROTEIN">Urine Protein</string>
    <string name="URINE_GLUCOSE">Urine Glucose</string>
    <string name="SPECIFIC_GRAVITY">Specific Gravity (S.G.)</string>
    <string name="PH_VALUE">pH Value</string>
    <string name="URINE_KETONE">Urine Ketone</string>
    <string name="EPITHELIAL_CELLS">Epithelial Cells</string>
    <string name="CRYSTALS">Crystals</string>
    <string name="BACTERIA">Bacteria</string>
    <string name="LOW">Low</string>
    <string name="HIGH">High</string>
    <string name="MODERATE">Moderate</string>
    <string name="HIGH_NORMAL">High Normal</string>
    <string name="DESIRABLE">Desirable</string>
    <string name="MILDLY_HIGH">Mildly High</string>
    <string name="NORMAL">Normal</string>
    <string name="ABNORMAL">Abnormal</string>
    <string name="DIABETIC">Diabetic</string>
    <string name="EARLY_DIABETIC">Early Diabetic</string>
    <string name="VERY_HIGH">Very High</string>
    <string name="VERY_LOW">Very Low</string>
    <string name="MILDLY_LOW">Mildly Low</string>
    <string name="BORDERLINE_HIGH">Borderline High</string>
    <string name="BETTER">Better</string>
    <string name="NEAR_OPTIMAL">Near Optimal</string>
    <string name="MODERATE_LOW">Moderate Low</string>
    <string name="MODERATE_HIGH">Moderate High</string>
    <string name="MILD_LOW">Mild Low</string>
    <string name="MILD_HIGH">Mild High</string>
    <string name="AVERAGE_RISK">Average Risk</string>
    <string name="BEST">Best</string>
    <string name="OPTIMAL">Optimal</string>
    <string name="GOOD">Good</string>
    <string name="OPEN_GALLERY">Open Gallery</string>
    <string name="TAKE_PHOTO">Take Photo</string>
    <string name="REMOVE_PHOTO">Remove Photo</string>
    <string name="GALLERY">Gallery</string>
    <string name="PHOTO">Photo</string>
    <string name="REMOVE">Remove</string>
    <string name="PRE_HYPERTENSION">PreHypertension</string>
    <string name="HYPERTENSION_STAGE_1">Hypertension- Stage 1</string>
    <string name="HYPERTENSION_STAGE_2">Hypertension- Stage 2</string>
    <string name="HYPERTENSION_CRITICAL">Hypertension- Critical</string>
    <string name="UNDERWEIGHT">Underweight</string>
    <string name="OVERWEIGHT">Overweight</string>
    <string name="PRE_OBESE">Pre-Obese</string>
    <string name="OBESE_LEVEL_1">Obese Level 1</string>
    <string name="OBESE_LEVEL_2">Obese Level 2</string>
    <string name="OBESE_LEVEL_3">Obese Level 3</string>
    <string name="SWITCH_PROFILE">Switch Profile</string>
    <string name="PICK_YOUR_HEIGHT">Pick Your Height</string>
    <string name="PICK_YOUR_WEIGHT">Pick Your Weight</string>
    <string name="PICK_YOUR_WAIST">Pick your Waist</string>
    <string name="CURRENT_WEIGHT">Pick Your Weight</string>
    <string name="ENTER_WEIGHT">Enter your weight</string>
    <string name="ENTER_HEIGHT">Enter your height</string>
    <string name="ENTER_YOUR_WAIST_SIZE">Enter your waist size</string>
    <string name="YOUR_BMI_IS">Your BMI is : </string>
    <string name="TAKE_ASSESSMENT">Take Assessment</string>
    <string name="TAKE_YOUR_HRA">Take your HRA</string>
    <string name="COMPLETE_YOUR_HRA">Complete your HRA</string>
    <string name="HIGH_RISK">High Risk</string>
    <string name="NEEDS_IMPROVEMENT">Needs Improvement</string>
    <string name="HEALTHY">Healthy</string>
    <string name="OPTIMUM">Optimum</string>
    <string name="COMING_SOON">Coming Soon</string>
    <string name="POWERED_BY">Powered by</string>
    <string name="PASSWORD_CHANGED">Password Changed</string>
    <string name="PASSWORD_CHANGED_SUCCESS">Your Password has been changed \nSuccessfuly</string>
    <string name="GO_TO_APP">Go Back To My App</string>
    <string name="MSG_OTP">OTP has been sent to your registered mobile number, please wait while we are retrieving</string>
</resources>