<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_12sdp"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_password_changed"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/img_tick"
        android:tint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbl_password_changed"
        style="@style/CustomTextviewBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/PASSWORD_CHANGED"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_password_changed"
        app:layout_constraintStart_toStartOf="@+id/img_password_changed"
        app:layout_constraintTop_toBottomOf="@+id/img_password_changed"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbl_password_changed_success"
        style="@style/CustomTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PASSWORD_CHANGED_SUCCESS"
        android:textColor="@color/vivant_track_param_textcolor"
        android:textSize="@dimen/_14sdp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@+id/lbl_password_changed"
        app:layout_constraintEnd_toEndOf="@+id/lbl_password_changed"
        app:layout_constraintStart_toStartOf="@+id/lbl_password_changed"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_go_to_app"
        style="@style/CustomButton"
        android:text="@string/GO_TO_APP"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lbl_password_changed_success"
        app:layout_constraintStart_toStartOf="@+id/lbl_password_changed_success"
        app:layout_constraintTop_toBottomOf="@+id/lbl_password_changed_success" />

</androidx.constraintlayout.widget.ConstraintLayout>
