<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5sp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbl_otp_msg"
        style="@style/CustomTextview"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/MSG_OTP"
        android:textColor="@color/textViewColor"
        android:textSize="@dimen/size_16sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/edt_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textViewColor"
        app:bar_enabled="true"
        app:bar_height="2dp"
        app:length="6"
        app:height="40dp"
        app:width="40dp"
        app:bar_active_color="@color/colorPrimary"
        app:bar_inactive_color="@color/vivantInactive"
        app:layout_constraintTop_toBottomOf="@+id/lbl_otp_msg"
        app:layout_constraintEnd_toEndOf="@+id/lbl_otp_msg"
        app:layout_constraintStart_toStartOf="@+id/lbl_otp_msg"
        android:layout_marginTop="16dp">

    </in.aabhasjindal.otptextview.OtpTextView>

    <ProgressBar
        android:id="@+id/progress_otp"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:indeterminate="false"
        android:max="10"
        android:progress="5"
        android:progressDrawable="@drawable/circular_progress"
        android:secondaryProgress="10"
        app:layout_constraintTop_toBottomOf="@+id/edt_otp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_seconds_left"
        style="@style/CustomTextview"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:text="00"
        android:textColor="@color/textViewColor"
        android:textSize="@dimen/size_22sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/progress_otp"
        app:layout_constraintStart_toStartOf="@+id/progress_otp"
        app:layout_constraintTop_toTopOf="@+id/progress_otp"
        app:layout_constraintBottom_toBottomOf="@+id/progress_otp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbl_sec"
        style="@style/CustomTextview"
        android:layout_gravity="center"
        android:text="@string/SEC"
        android:textColor="@color/textViewColorSecondary"
        android:textSize="@dimen/size_14sp"
        app:layout_constraintEnd_toEndOf="@+id/progress_otp"
        app:layout_constraintStart_toStartOf="@+id/progress_otp"
        app:layout_constraintTop_toBottomOf="@+id/progress_otp"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_resend_otp"
        style="@style/CustomTextview"
        android:layout_gravity="center"
        android:layout_margin="@dimen/default_5dp"
        android:gravity="center"
        android:text="@string/RESEND_OTP"
        android:textColor="@color/textViewColor"
        android:textSize="@dimen/size_14sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/lbl_sec"
        app:layout_constraintStart_toStartOf="@+id/lbl_sec"
        app:layout_constraintEnd_toEndOf="@+id/lbl_sec" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        style="@style/CustomButton"
        android:layout_width="150dp"
        android:padding="@dimen/default_5dp"
        android:gravity="center"
        android:text="@string/OK"
        app:layout_constraintTop_toBottomOf="@+id/txt_resend_otp"
        app:layout_constraintStart_toStartOf="@+id/txt_resend_otp"
        app:layout_constraintEnd_toEndOf="@+id/txt_resend_otp"
        android:layout_marginTop="10dp"/>

    <ProgressBar
        android:id="@+id/progress_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:indeterminate="true"
        android:progressDrawable="@drawable/circular_progress"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/btn_ok"
        app:layout_constraintStart_toStartOf="@+id/btn_ok"
        app:layout_constraintEnd_toEndOf="@+id/btn_ok"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>