<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5sp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbl_otp_msg"
        style="@style/CustomTextview"
        android:gravity="center"
        android:text="@string/MSG_OTP"
        android:textColor="@color/textViewColor"
        android:textSize="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/edt_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textViewColor"
        app:bar_enabled="true"
        app:bar_height="2dp"
        app:length="6"
        app:height="@dimen/_35sdp"
        app:width="@dimen/_35sdp"
        app:bar_active_color="@color/vivantGreen"
        app:bar_inactive_color="@color/vivantInactive"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@+id/lbl_otp_msg"
        app:layout_constraintEnd_toEndOf="@+id/lbl_otp_msg"
        app:layout_constraintStart_toStartOf="@+id/lbl_otp_msg">

    </in.aabhasjindal.otptextview.OtpTextView>

    <ProgressBar
        android:id="@+id/progress_otp"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:indeterminate="false"
        android:max="10"
        android:progress="5"
        android:progressDrawable="@drawable/circular_progress"
        android:secondaryProgress="10"
        android:layout_marginTop="@dimen/_28sdp"
        app:layout_constraintTop_toBottomOf="@+id/edt_otp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_seconds_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:text="00"
        android:textColor="@color/textViewColor"
        android:textSize="@dimen/size_22sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/progress_otp"
        app:layout_constraintStart_toStartOf="@+id/progress_otp"
        app:layout_constraintTop_toTopOf="@+id/progress_otp"
        app:layout_constraintBottom_toBottomOf="@+id/progress_otp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbl_sec"
        style="@style/CustomTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/SEC"
        android:textColor="@color/textViewColorSecondary"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@+id/progress_otp"
        app:layout_constraintStart_toStartOf="@+id/progress_otp"
        app:layout_constraintTop_toBottomOf="@+id/progress_otp"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_resend_otp"
        style="@style/CustomTextview"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/RESEND_OTP"
        android:textColor="@color/textViewColor"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/lbl_sec"
        app:layout_constraintStart_toStartOf="@+id/lbl_sec"
        app:layout_constraintEnd_toEndOf="@+id/lbl_sec" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        style="@style/CustomButton"
        android:layout_width="@dimen/_120sdp"
        android:gravity="center"
        android:text="@string/OK"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/txt_resend_otp"
        app:layout_constraintStart_toStartOf="@+id/txt_resend_otp"
        app:layout_constraintEnd_toEndOf="@+id/txt_resend_otp" />

    <ProgressBar
        android:id="@+id/progress_view"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:indeterminate="true"
        android:progressDrawable="@drawable/circular_progress"
        android:indeterminateTint="@color/vivantGreen"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/btn_ok"
        app:layout_constraintStart_toStartOf="@+id/btn_ok"
        app:layout_constraintEnd_toEndOf="@+id/btn_ok" />

</androidx.constraintlayout.widget.ConstraintLayout>