<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/med_reminder_expanded"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/med_notification_title"
                style="@style/VivantTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/_12sdp"/>

            <TextView
                android:id="@+id/med_notification_subtext"
                style="@style/VivantDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/_12sdp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/med_schedule_time"
                style="@style/VivantTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:gravity="end"
                android:textSize="@dimen/_12sdp"/>

            <TextView
                android:id="@+id/lbl_med_reminder"
                style="@style/VivantTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/MEDICINE_REMINDER"
                android:textSize="@dimen/_11sdp"/>

            <TextView
                android:id="@+id/med_person_name"
                style="@style/VivantDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="@dimen/_10sdp"
                android:gravity="end"
                android:ellipsize="end"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_taken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:src="@drawable/img_taken"
                android:contentDescription="@string/TAKEN"
                android:tint="@color/vivant_nasty_green"/>

            <TextView
                android:id="@+id/txt_taken"
                style="@style/TextAppearance.Compat.Notification.Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TAKEN"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/selector_text_color"
                android:layout_marginStart="@dimen/_4sdp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:src="@drawable/img_skipped"
                android:tint="@color/vivant_watermelon"/>

            <TextView
                android:id="@+id/txt_skip"
                style="@style/TextAppearance.Compat.Notification.Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SKIP"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/selector_text_color"
                android:layout_marginStart="@dimen/_4sdp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>